Wed Feb 18 22:03:11 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/*: should not depend on $KCODE.

Wed Feb 18 18:07:09 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_sprintf.rb: added tests.

Wed Feb 18 17:18:01 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/win32ole/win32ole.c: need to include <olectl.h> on Cygwin.

Wed Feb 18 10:23:34 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* sprintf.c (rb_f_sprintf): clean up.

Tue Feb 17 23:40:34 2004  Guy Decoux  <ts@moulon.inra.fr>

	* sprintf.c (rb_f_sprintf): preserve original val for
	  format_integer. [ruby-talk:92975]

Tue Feb 17 23:28:45 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/soap/marshal/test_marshal.rb, test/ruby/test_marshal.rb: do $:
	  trick to share the testcase test/ruby/marshaltestlib.rb.

Tue Feb 17 23:13:23 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/ruby/marshaltestlib.rb: common marshal testcase added.

	* test/ruby/test_marshal.rb: use above testsuite.

	* test/soap/marshal/test_marshal.rb: ditto.

	* test/soap/marshal/cmarshal.rb: removed (not used).

Tue Feb 17 19:34:26 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extmake): $extout_prefix doesn't vary for libraries.

	* ext/extmk.rb (extmake): remove compile directory if empty.

	* ext/extmk.rb (parse_args) lib/mkmf.rb (create_makefile): move
	  initialization of $extout_prefix from lib/mkmf.rb.  [ruby-dev:22928]

	* ext/extmk.rb: clear ext and extout directory when cleaning.

	* lib/mkmf.rb (CLEANLIBS): should be under $(arch) directory.

Tue Feb 17 18:02:10 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/strscan/strscan.c: ScanError may be (wrongly) garbage
	  collected. (thanks Gavin Sinclair)

	* ext/strscan/strscan.c: move ::ScanError to StringScanner::Error.
	  ::ScanError is also defined for backward compatibility.

	* ext/strscan/strscan.c: #peep is obsolete, use #peek.

	* ext/strscan/strscan.c: #empty? is obsolete, use #eos?.
