@@ -1,3 +1,7 @@
+Wed Feb 18 22:42:19 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>
+
+	* test/rinda/test_rinda.rb: improt test_rinda.rb
+
 Wed Feb 18 22:03:11 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>
 
 	* test/*: should not depend on $KCODE.
